--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "rm -rf dist && webpack"
+    "prestart": "rm -rf dist",
+    "start": "webpack"
   },
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.4.0",
-    "css-loader": "^0.26.2",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "extract-css-chunks-webpack-plugin": "^2.0.17",
     "load-webpack-plugins": "^0.0.2",
-    "style-loader": "^0.13.2",
-    "webpack": "^2.2.1"
+    "style-loader": "^0.19.0",
+    "webpack": "^3.7.1"
   }
 }
