--- a/package.json
+++ b/package.json
@@ -4,17 +4,25 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "stats": "webpack --stats",
     "prestart": "rm -rf dist",
-    "start": "webpack"
+    "start": "webpack",
+    "dev": "npm run start",
+    "postdev": "http-server -p 9000 dist"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-dual-import": "^1.1.5",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.1",
     "extract-css-chunks-webpack-plugin": "^2.0.17",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "html-webpack-plugin": "^2.30.1",
+    "http-server": "^0.10.0",
     "load-webpack-plugins": "^0.0.2",
     "style-loader": "^0.19.0",
-    "webpack": "^3.7.1"
+    "webpack": "^3.7.1",
+    "webpack-flush-chunks": "^1.2.0"
   }
 }
