--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "css-loader": "^0.28.7",
     "extract-css-chunks-webpack-plugin": "^2.0.17",
+    "flush-css-chunks-webpack-plugin": "^0.0.3",
     "extract-text-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^2.30.1",
     "http-server": "^0.10.0",
